<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VOGUE</string>
    <string name="app_title">VOGUE</string>
	
    <string name="action_settings">Settings</string>
    <string name="left_drawer_hint_open">Open drawer</string>
    <string name="left_drawer_hint_close">Close drawer</string>
    <string name="action_menu_category">Categories</string>
    <string name="title_error">Error</string>
    <string name="error_to_load_data">Load Data Fail!</string>
    <string name="button_ok">OK</string>
    <string name="main_loading">Loading News...</string>
    <string name="store_loading">Loading Store...</string>
    <string name="add_favorite">Added to favorite.</string>
    <string name="remove_favorite">Removed from favorite.</string>
    <string name="share_title">Share On</string>
    <string name="share_subject">Shared From VOGUE</string>
    <string name="setting_nightmode">Night Mode</string>
    <string name="setting_fontsize">Font Size</string>
    <string name="setting_nointerested">Not Interested</string>
    <string name="press_back_again">Press back again to exit.</string>
    
    <string name="ctg_cannot_all_clear">Leave one category at least.</string>
    <string name="label_menu_fav">My Favorites</string>
    <string name="label_menu_facebook" translatable="false">Facebook</string>
    <string name="label_menu_feed">News Feed</string>
    <string name="label_menu_histroy">Recently Read</string>
    
    <string name="label_menu_download">Offline Download</string>
    <string name="label_menu_config">Settings</string>
    <string name="label_menu_mode_night">Night Mode</string>
    <string name="label_menu_mode_hide">Hide News Read</string>
    <string name="splash_ver">Version: %1$s</string>
    <string name="splash_foot">www.vogue.com.tw</string>
    <string name="webview_readsource">READ THIS ARTICLE ON THE WEB</string>

    <!-- emo names -->
    <string name="label_amaze">Surprised</string>
    <string name="label_move">Moved</string>
    <string name="label_angry">Angry</string>
    <string name="label_happy">Happy</string>
    <string name="label_sad">Sad</string>
    <string name="label_worry">Worried</string>

    
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_pull_label">Pull to get the latest news...</string>
    <string name="pull_to_refresh_tap_label">Pull to get the latest news...</string>
    <string name="pull_to_refresh_refreshing_label">Loading News...</string>
    
    <string name="pull_to_refresh">Pull to get the latest news...</string>
	<string name="release_to_refresh">Release to refresh...</string>
	<string name="refreshing">Updating News...</string>
	<string name="not_updated_yet">Never Udpate</string>
	<string name="updated_at">Last update at %1$s ago</string>
	<string name="updated_just_now">Just updated</string>
	<string name="time_error">Load failed.</string>
	
	<string name="minute"> minute</string>
	<string name="hour"> hour</string>
	<string name="day"> day</string>
	<string name="month"> month</string>
	<string name="year"> year</string>


    <!-- settings main-->
    <string name="set_feed">News feeds</string>
    <string name="set_edition">Edition</string>
    <string name="set_clean">Clear the cache</string>
    <string name="set_suggest">Feed back</string>
    <string name="set_store">Offers</string>
    <string name="set_about">About</string>
    
    <string name="dialog_update_title">Update</string>
    <string name="dialog_update_progress_title">Update progress</string>
    <string name="dialog_update_text">A new version found. \nWill you want to update?</string>
    <string name="dialog_update_text2">Upgrading to version %1$s</string>
    
    <string name="dialog_fav_title">Favorite</string>
    <string name="dialog_fav_text">Remove these favorites?</string>
    <string name="dialog_yes">Ok</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_clean">Cleaning</string>

    <string name="fav_delete">Do you want to remove these favorites?</string>
    <string name="fav_share">Select news to share please.</string>
    
    <string name="update_skip">Skip</string>
    
    <string name="offline_setting_title">Offline Setting</string>
    <string name="offline_select_category">Select category</string>
    <string name="offline_select_all">All</string>
    <string name="offline_download_pic">Download Pictures</string>
    <string name="offline_download_time">Timing Offline Download</string>
    <string name="dialog_offline_time_title">Set Time</string>
    <string name="offline_download_empty">Select one categroy first</string>
    <string name="offline_download_finish">Offline download finished</string>
    <string name="feedback_info">You can write suggestions to us:</string>
    <string name="feedback_send">Send</string>
    
    <string name="notification_title">You got a new feed.</string>
    <string name="feed_is_empty">News feed is empty.</string>
    <string name="feedback_sent">Your feedback is sent.</string>
    
    <string name="weibosdk_demo_share_webpage_template">【%1$s】（Share From Vogue %2$s）</string>
    
</resources>